# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.db  docker-compose.yml  docker.sh  pyproject.toml  requirements.txt  requirements_dev.txt
app/: __main__.py  config.py  di.py  initial_data.py  ioc.py  main.py
app/adapters/auth/: jwt.py
app/adapters/database/: post.py  role.py  uow.py  user.py
app/application/: authenticate.py  create_post.py  create_role.py  delete_post.py  delete_role.py  get_all_posts.py  get_all_roles.py  get_post.py  get_role.py  register.py  update_post.py
app/application/common/: db.py  dto.py  id_provider.py  interactor.py  post_gateway.py  role_gateway.py  uow.py  user_gateway.py
app/application/post/: create_post.py  get_all_posts.py  get_post.py  update_post.py
app/application/role/: create_role.py  delete_role.py  get_all_roles.py  get_role.py
app/application/schemas/: __init__.py  post.py  role.py  token.py  user.py
app/application/user/: authenticate.py  register.py
app/domain/entities/: post.py  role.py  user.py
app/domain/exceptions/: access.py
app/domain/services/: access.py
app/infrastructure/auth/: password.py
app/infrastructure/gateway/: role.py  uow.py  user.py
app/presentation/: interactor_factory.py
app/presentation/api/: __init__.py  dependencies.py  exceptions.py
app/presentation/api/v1/: __init__.py  auth.py  posts.py  roles.py  users.py
app/utils/: jwt.py
migrations/: env.py
migrations/versions/: 103e7f7cff81_disabled.py  75dee1a40e1a_initial.py  7fd408883b4a_initial.py  8890fd2f73a9_rename_tables_uuid.py  a79e31ad9c9c_initial.py  bdc4d4e97e0d_change_password_type_to_int.py  d3ce03a3957f_initial.py  eb38587fc40d_add_post.py  f1fc7ead0c55_role.py
src/: dependencies.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  users.py
src/core/: config.py  unitofwork.py
src/core/repositories/: __init__.py  base.py  users.py
src/core/schemas/: __init__.py  users.py
src/core/services/: __init__.py  users.py
src/db/: __init__.py  db.py
src/db/models/: user.py
tests/: conftest.py  test_auth.py  test_posts.py
tests/application/: test_post.py
