[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
dishka = "^1.1.0"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
aiosqlite = "^0.20.0"


[tool.poetry.group.tests.dependencies]
httpx = "^0.27.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
